; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_shims.c_psynch_rw_wrlock.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/pthread/extr_pthread_shims.c_psynch_rw_wrlock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i32, i32, i32, i32, i32, i32, i32*)* }
%struct.psynch_rw_wrlock_args = type { i32, i32, i32, i32, i32 }

@pthread_functions = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @psynch_rw_wrlock(i32 %0, %struct.psynch_rw_wrlock_args* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.psynch_rw_wrlock_args*, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.psynch_rw_wrlock_args* %1, %struct.psynch_rw_wrlock_args** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @pthread_functions, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (i32, i32, i32, i32, i32, i32, i32*)*, i32 (i32, i32, i32, i32, i32, i32, i32*)** %8, align 8
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.psynch_rw_wrlock_args*, %struct.psynch_rw_wrlock_args** %5, align 8
  %12 = getelementptr inbounds %struct.psynch_rw_wrlock_args, %struct.psynch_rw_wrlock_args* %11, i32 0, i32 4
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.psynch_rw_wrlock_args*, %struct.psynch_rw_wrlock_args** %5, align 8
  %15 = getelementptr inbounds %struct.psynch_rw_wrlock_args, %struct.psynch_rw_wrlock_args* %14, i32 0, i32 3
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.psynch_rw_wrlock_args*, %struct.psynch_rw_wrlock_args** %5, align 8
  %18 = getelementptr inbounds %struct.psynch_rw_wrlock_args, %struct.psynch_rw_wrlock_args* %17, i32 0, i32 2
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.psynch_rw_wrlock_args*, %struct.psynch_rw_wrlock_args** %5, align 8
  %21 = getelementptr inbounds %struct.psynch_rw_wrlock_args, %struct.psynch_rw_wrlock_args* %20, i32 0, i32 1
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.psynch_rw_wrlock_args*, %struct.psynch_rw_wrlock_args** %5, align 8
  %24 = getelementptr inbounds %struct.psynch_rw_wrlock_args, %struct.psynch_rw_wrlock_args* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = call i32 %9(i32 %10, i32 %13, i32 %16, i32 %19, i32 %22, i32 %25, i32* %26)
  ret i32 %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
